src/player/modules/Titlebar/style.css
.titlebar {
    order: 0;
    flex: 0 1 40px;
    align-self: auto;
    position: relative;
    background: var(--primary-bg-color);
    width: 100%;
    padding: 0;
    z-index: 99;
    font-weight: 200;
    -webkit-transition: all 200ms linear;
    -moz-transition: all 200ms linear;
    -o-transition: all 200ms linear;
    transition: all 200ms linear;
}

.titlebar.sidebarOpen {
    box-shadow: 202px 0 2px 1px #000;
}

.titlebar.sidebarOpen.editActive {
    box-shadow: none;
}

.titlebar.editActive {
    background: var(--secondary-fg-color);
}

.titlebar button {
    width: 40px;
    height: 40px;
    font-size: 19px;
    padding: 4px 6px;
    border: none;
    background-color: transparent;
    cursor: pointer;
    color: var(--primary-fg-color);
}

.titlebar.editActive button {
    color: var(--primary-bg-color);
}

.titlebarViewMode {
    float: left;
}

.titlebarViewMode.hidden {
    display: none;
}

.titlebar.editActive .titlebarViewMode.hidden {
    display: block;
}

 .titlebarViewMode button {
    float: left;
    position: relative;
    opacity: .7;
}

.titlebar .titlebarViewMode button[data-viewmode="video"] {
    margin-left: 20px;
}

.titlebar .titlebarViewMode button[data-viewmode="video"]:after {
    content: ">";
    position: absolute;
    top: 8px;
    left: -13px;
    color: var(--primary-fg-color);
    font-weight: normal;
    font-size: 13px;
}

.titlebar.editActive .titlebarViewMode button[data-viewmode="video"]:after {
    color: var(--primary-bg-color);
}

.titlebarViewMode button.unsavedChanges:before {
    content: "*";
    position: absolute;
    top: -4px;
    right: -5px;
    color: #FF9900;
    font-weight: bold;
    font-size: 20px;
}

.titlebarViewMode button:hover {
    opacity: 1;
}


.titlebarViewMode button.active {
    background-color: transparent;
    /*color: var(--primary-fg-color);*/
    opacity: 1;
    pointer-events: none;
}

.titlebar.editActive .titlebarViewMode button.active {
    opacity: 1;
    pointer-events: none;
}

.titlebar .hypervideoActionButtonContainer {
    position: absolute;
    top: 0px;
    left: 160px;
}

.titlebar .titlebarTitle {
    position: absolute;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    color: var(--primary-fg-color);
    z-index: -1;
}

.titlebar.editActive .titlebarTitle {
    color: var(--primary-bg-color);
}

.titlebar .titlebarTitle .hypervideoEditButton {
    margin-left: 10px;
}

.titlebar .titlebarTitle .hypervideoEditButton,
.titlebar .titlebarTitle .hypervideoDeleteButton {
    opacity: 0.7;
    display: none;
}

.titlebar .titlebarTitle .hypervideoEditButton:hover,
.titlebar .titlebarTitle .hypervideoDeleteButton:hover {
    opacity: 1;
}

.titlebar .titlebarTitle .hypervideoEditButton.active,
.titlebar .titlebarTitle .hypervideoDeleteButton.active {
    display: flex;
}

.titlebar .titlebarTitle .localFolderIndicator {
    font-size: 12px;
    opacity: 0.6;
    white-space: nowrap;
    cursor: pointer;
    margin-right: 8px;
    display: none;
}

.titlebar.editActive .titlebarTitle .localFolderIndicator {
    display: inline;
}

.titlebar.editActive .titlebarTitle .localFolderIndicator:hover {
    opacity: 1;
}

.titlebar .titlebarActionButtonContainer {
    float: right;
}

.frametrail-body.inFullscreen .titlebar .logoutButton {
    display: none !important;
}

.titlebar .titlebarActionButtonContainer .manageResourcesButton, 
.titlebar .titlebarActionButtonContainer .adminSettingsButton, 
.titlebar .titlebarActionButtonContainer .startEditButton, 
.titlebar .titlebarActionButtonContainer .leaveEditModeButton, 
.titlebar .titlebarActionButtonContainer .userSettingsButton, 
.titlebar .titlebarActionButtonContainer .logoutButton {
    float: left;
}

.titlebar .titlebarActionButtonContainer .leaveEditModeButton {
    border-left: 1px solid #bbb;
}

.newHypervideoDialog .message.error {
    position: absolute;
}

.videoSourceTabs .uploadNewVideoResource {
    position: absolute;
    right: 0px;
    top: -35px;
}

.shareDialog input[type="text"], .shareDialog textarea {
    box-sizing: border-box;
    display: block;
    width: 100%;
    margin-bottom: 20px;
}

